# vision

./: .dockerignore  .flake8  .gitignore  .release-it.json  Api.md  CHANGELOG.md  Dockerfile  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README-fr.md  README.md  REFACTORING_SUMMARY.md  analyse.py  app.py  deploy.sh  detect.py  detect_objects.py  detection_schemas.py  entrypoint.sh  env.example  job.py  lefthook.yml  openapi.json  pyproject.toml  renovate.json  requirements.txt  result_models.py  results_index.py  rq_queue.py  run.py  run_app.py  run_worker.py  scene_detect.py  scenes.py  test_web_service.py  utils.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  pr-docker-test.yml  release.yml  test.yml
app/: README.md  __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  background.py  celery_app.py  celery_queue.py  config.py  dependencies.py  results_index.py  rq_queue.py  tasks.py  utils.py
app/detection/: __init__.py  detect_objects.py  models.py  object_detect.py  scene_detect.py  scenes.py  sprite.py  tracker.py
app/models/: __init__.py  result_models.py  schemas.py
app/tests/: test_api.py  test_web_service.py  test_worker_restart.py
samples/: samples.json
